--- a/config/site_settings.yml
+++ b/config/site_settings.yml
@@ -184,8 +184,7 @@ basic:
   enable_mobile_theme:
     client: true
     default: true
-  default_theme_id:
-    default: -1
+  default_theme_key:
     hidden: true
   relative_date_duration:
     client: true
